# vpc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  resource.h  vpc.sln  vpc.vcxproj  vpc.vcxproj.filters
.github/workflows/: build.yml  codeql.yml
interfaces/: interfaces.cpp
public/: datamap.h  filesystem.h  filesystem_passthru.h
public/appframework/: iappsystem.h
public/mathlib/: mathlib.h  vector.h
public/tier0/: basetypes.h  dbg.h  fasttimer.h  ia32detect.h  k8performancecounters.h  l2cache.h  logging.h  memalloc.h  memdbgon.h  platform.h  stackstats.h  threadtools.h  threadtools.inl  vprof.h
public/tier1/: checksum_crc.h  checksum_md5.h  convar.h  fmtstr.h  functors.h  mempool.h  memstack.h  strtools.h  utlblockmemory.h  utlbuffer.h  utlhash.h  utllinkedlist.h  utlmap.h  utlmemory.h  utlmultilist.h  utlqueue.h  utlrbtree.h  utlsortvector.h  utlstring.h  utlsymbol.h  utlvector.h
public/vstdlib/: ikeyvaluessystem.h  vstrtools.h
tier0/: commandline.cpp  cpu.cpp  cpu_posix.cpp  cputopology.cpp  dbg.cpp  etwprof.cpp  logging.cpp  mem_helpers.cpp  mem_helpers.h  memdbg.cpp  memstd.cpp  memstd.h  memvalidate.cpp  platform.cpp  platform_posix.cpp  pmelib.cpp  stacktools.cpp  threadtools.cpp  vprof.cpp  win32consoleio.cpp
tier0/dlmalloc/: malloc.cpp
tier1/: characterset.cpp  checksum_crc.cpp  checksum_md5.cpp  convar.cpp  exprevaluator.cpp  generichash.cpp  interface.cpp  keyvalues.cpp  mempool.cpp  memstack.cpp  splitstring.cpp  stringpool.cpp  strtools.cpp  utlbuffer.cpp  utlstring.cpp  utlsymbol.cpp
utils/vpc/: RCa28380  app_version_config.h  baseprojectdatacollector.cpp  config_general.cpp  configuration.cpp  dependencies.cpp  dependencies.h  groupscript.cpp  macros.cpp  main.cpp  memory_reservation_x64.cpp  p4sln.cpp  product_version_config.h  projectgenerator_codelite.cpp  projectgenerator_makefile.cpp  projectgenerator_ps3.cpp  projectgenerator_ps3.h  projectgenerator_vcproj.cpp  projectgenerator_vcproj.h  projectgenerator_win32.h  projectgenerator_win32_2010.cpp  projectgenerator_win32_2010.h  projectgenerator_win32_2010.inc  projectgenerator_xbox360.cpp  projectgenerator_xbox360_2010.cpp  projectscript.cpp  solutiongenerator_codelite.cpp  solutiongenerator_makefile.cpp  solutiongenerator_win32.cpp  solutiongenerator_xcode.cpp  sys_utils.cpp  sys_utils.h  vpc.cpp  vpc.h
utils/vpccrccheck/: crccheck_shared.cpp
vstdlib/: cvar.cpp  keyvaluessystem.cpp  random.cpp  vstrtools.cpp
